Changes in version 0.6.3

- Added scripts directory along with scripts for creating some
  common classes used in the framework.
- Modified Makefile.lib to work with GNU make 3.82
- Reoganized build system to be closer to classic unix style
- Added jana-config script for easier setting of compiler options


Changes in version 0.6.2

- Added to force_links.cc to force JObject::GetTag to be linked
- Cleaned up exceptions a bit to (nearly) always throw a JException
  and catch a std::exception
- Modified JCalibration system to support event-level calibration boundaries


Changes in version 0.6.1

- Added optional description string to configuration parameters
- Fixed bug where EVENTS_TO_KEEP actually kept 1 less than specified
- Start all 3 high resolution system timers and use PROF timer for 
  factory call stack accounting
- Added JRawData object to TestSpeed plugin to make it a more
  complete example.
- Fixed bugs in janadot plugin and improved display output
- Added option to mark JEventProcessor objects for deletion when JApplication::fini
  is called using optional second argument to JApplication::AddProcessor.
- JParameterManager::GetParameter(key) throws exception when parameter
  doesn't exist
- Added AddAssociatedObjectAutoDelete method to JObject to allow ownership
  of JObjects to be handed over to other JObjects.
- Copy BMS directory to installdir to preserve platform-dependent settings

Changes in version 0.6.0

- Added PutCalib method to JCalibration
- Added jcalibcopy utility
- Added GetMultiple methods to JCalibration and JCalibrationXML
- Nearly complete rewrite of JStreamLog and JStreamLogBuffer classes
  many JANA messages now sent through them. Removed JLog class.
- Added NTHREADS config. parameter which can be set to "Ncores"
- Added AddLog,GetLog,GetSingle, and GetSingleT methods to JObject
- Fixed bug with config. parameters containing white space being truncated
- Link JANA library to all plugins (needed for gcc4.4 on F11)